# MeshLIb2.0_ALPHA

./: README.md
Mesh/Mesh/: Edge.h  Face.h  Vertex.h
MeshLib/toolbox/: DebugSetting.h  FileIO.h  MeshLibGeneralDef.h  TMeshLibGeneralDef.h
MyMeshCode/AdjustNegativeTets/: AdjuestNegative.h  BaseMeshReadArray.h  CMakeLists.txt  GLTetView.cpp  SphericalDistribution.h  VertexDecomposable.h  main.cpp  test_main.cpp
MyMeshCode/FlannDemo/: CMakeLists.txt  main.cpp
MyMeshCode/GetTetSurface/: CMakeLists.txt  main.cpp
MyMeshCode/HarmonicMap/: main.cpp
MyMeshCode/HarmonicMapWithTexture/: CMakeLists.txt  main.cpp
MyMeshCode/HighPrecisionTest/: CMakeLists.txt  main.cpp
MyMeshCode/M2ObjFile/: CMakeLists.txt  (+1 more)
MyMeshCode/VertexDecomposible/: BaseMeshReadArray.h  C2DMesh.cpp  C2DMesh.h  CMakeLists.txt  D3Parameterization.h  TestC2DMesh.cpp  VertexDecomposable.h  main.cpp  test_main.cpp
Tetgen/: GenTet.asv  GenTet.m  SingleTet.t  SingleTetWithVertex.t  TwoTets.t  bimba.t  bimba_h_mapped.t  bimba_h_sphereHarmonic.t  bimba_h_sphereHarmonicB.t  bimba_h_sphereHarmonicB_non_negative.t  bimba_h_sphereHarmonic_non_negative.t  bimba_sHarmonic.t  bimba_sphere.t  bimba_sphere_low.t  bimba_sphere_non_negative.t  david.t  david_h_surface.m  david_sHarmonic.t  david_sphere.t  david_sphere_non_negative.t  david_sphere_non_negative_noisy.t  david_sphere_non_negative_noisy_surface.m  eight.t  lion.t  lion_hMapped.t  lion_h_surface.m  lion_non_negative.t  lion_sHarmonic.t  lion_sphere.t  lion_sphere_non_negative.t  lion_surface_sphere.m  raven.t  raven_sHarmonic.t  raven_sphere.t
(+219 files in other folders)
